@startuml

title __JDBC-CRUD3's Component Diagram__\n

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockSchedulingService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockService {
        }
      }
    }
  }
  

  DeliveryRepository -up-|> NamedParameterJdbcDaoSupport
  DeliveryRestController o-- DeliveryService : deliveryService
  DeliveryService o-- DeliveryRepository : deliveryRepository
  DeliveryService o-- StockRepository : stockRepository
  DemoApplication -up-|> CommandLineRunner
  OrderRepository -up-|> NamedParameterJdbcDaoSupport
  OrderRestController o-- OrderService : orderService
  OrderService o-- OrderRepository : orderRepository
  OrderService o-- StockRepository : stockRepository
  RevisionRepository -up-|> NamedParameterJdbcDaoSupport
  RevisionRestController o-- RevisionService : revisionService
  RevisionSchedulingService o-- RevisionService : revisionService
  RevisionService o-- RevisionRepository : revisionRepository
  RevisionService o-- OrderRepository : orderRepository
  StockRepository -up-|> NamedParameterJdbcDaoSupport
  StockRestController o-- StockService : stockService
  StockSchedulingService o-- StockService : stockService
  StockService o-- StockRepository : stockRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
